<resources>
    <string name="app_name" translatable="false">Math-Software</string>
    <string name="strpage_language">language</string>
    <string name="about">about</string>
    <string name="processes">Processes</string>
    <string name="strpage_statistics">Statistics</string>
    <string name="strpage_quadratic_equations">Quadratic\n  Equations</string>
    <string name="strpage_vectors">Vectors</string>
    <string name="strpage_matrix">Matrix</string>
    <string name="ergebnis_text1">Round result to</string>
    <string name="decimal_places">decimal places</string>
    <string name="btn_formula">Show formula</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_delete">Delete</string>
    <string name="txtView_ergebnis">= Result</string>
    <string name="btn_Quadratic_Equations">Quadratic Equations</string>
    <string name="quadratic_equations_title">Quadratic Equations</string>
    <string name="processes_title">processes</string>
    <string name="btn_wachstumsprozess">Growth process</string>
    <string name="btn_zerfallsprozess">Decay process</string>
    <string name="fill_fields_message">Please fill all fields</string>
    <string name="rechner_page_txtSchritte">Step</string>
    <string name="rechner_page_txtStartwert">Start value</string>
    <string name="rechner_page_txtWachstumswert">Growth in %</string>
    <string name="rechner_page_txtEndwert">Endvalue</string>
    <string name="rechner_page_eingabeStartwert">Please enter start value:</string>
    <string name="rechner_page_eingabeZinssatz">"Please enter the growth rate: "</string>
    <string name="rechner_page_eingabeLaufzeit">Please enter the term:</string>
    <string name="rechner_page_txtMenge">Set</string>
    <string name="rechner_page_txtTime">Time</string>
    <string name="rechner_page_eingabeZellmenge">Please enter quantity:</string>
    <string name="rechner_page_eingabeWachstumsfaktor">Please enter the growth factor:</string>
    <string name="rechner_page_eingabeLaufzeitZellwachstum">Please specify the duration of the extrapolation:</string>
    <string name="btnMinimum">Minimum</string>
    <string name="btnSpannweite">Range</string>
    <string name="btnArithmeticMean">Arithmetic mean</string>
    <string name="btnGeometricMedium">Geometric medium</string>
    <string name="btnMedian">Median</string>
    <string name="btnModal">Modal</string>
    <string name="btnVariance">Variance</string>
    <string name="btnStandardabweichung">Standard deviation</string>
    <string name="btnAlles">Altogether</string>
    <string name="rechner_statistik_frage_zahleneingabe">How many numbers do you want to enter?</string>
    <string name="rechner_statistik_counter_eingabe">Enter the 1st digit: </string>
    <string name="tooltiptext_bestaetigung">Confirm</string>
    <string name="titleStatistik">Statistics</string>
    <string name="rechner_qg_text_keineLoesung">No Solution</string>
    <string name="message_erstmal_ausrechnen">Please calculate first</string>
    <string name="message_groesse_eingabe">Enter the size</string>
    <string name="rechner_statistik_ausgabe_biggestNumber">The biggest Number is:</string>
    <string name="rechner_statistik_ausgabe_kleinsteZahl">The smallest number is:</string>
    <string name="rechner_statistik_ausgabe_spannweite">The range is:</string>
    <string name="rechner_statistik_ausgabe_arithmetischesMittel">The Arithmetic Mean is:</string>
    <string name="rechner_statistik_ausgabe_geoMetrischesMittel">The Geometric Medium is:</string>
    <string name="rechner_statistik_ausgabe_geoMittelNoSolutionTxt">The Geometric Medium has no solution!</string>
    <string name="rechner_statistik_ausgabe_median">The Median is:</string>
    <string name="rechner_statistik_ausgabe_modus">The Modal is:</string>
    <string name="rechner_statistik_ausgabe_varianz">The variance is:</string>
    <string name="rechner_statistik_ausgabe_standardabweichung">The Standard Deviation is:</string>
    <string name="btnMax">Maximum</string>
    <string name="rechner_statistik_text_zahlGeben">Give the</string>
    <string name="rechner_statistik_textZahlNachCounter">. number</string>
    <string name="btn_expo_growth">Exponential growth</string>
    <string name="btn_expo_decay">Exponential decrease - decay</string>
</resources>
