<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prozesseClasses.ProzessePageActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnWachstumsprozess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/top_right_left_corner_round"
        android:onClick="openProzesseRechnerPage_Sparvertrag"
        android:text="@string/btn_wachstumsprozess"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="@+id/btnZerfallsprozess"
        app:layout_constraintStart_toStartOf="@+id/btnZerfallsprozess"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btnZerfallsprozess"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_without_corners_middle"
        android:onClick="openProzessRechnerPage_Zellwachstum"
        android:text="@string/btn_zerfallsprozess"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWachstumsprozess" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_without_corners_middle"
        android:onClick="openProzessRechnerPage_expoWachstum"
        android:text="@string/btn_expo_growth"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="@+id/btnZerfallsprozess"
        app:layout_constraintStart_toStartOf="@+id/btnZerfallsprozess"
        app:layout_constraintTop_toBottomOf="@+id/btnZerfallsprozess" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_right_left_corner_round"
        android:onClick="openProzessRechnerPage_expoZerfall"
        android:text="@string/btn_expo_decay"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />
</android.support.constraint.ConstraintLayout>